--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
      </div>
      <div class="box3" id="p3">購入する
         <p>
-           値段　２１９３円
+           値段　２１９３円  ブルートゥースイヤホン　色　黒　接続技術　無線
+           <img src="51acuNA3QnS._AC_SX569_.jpg" width="100" height="100">
         </p>
      </div>
      <div class="Top" id="pTop">トップに戻る</div>
-  
   <form>
      <label for="email">メールアドレス</label>
      <input id="email" type="text" name="name"id="email">
